src/objects/Order_Charge_Titles__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Format_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format Type</label>
        <referenceTo>Format_Types__c</referenceTo>
        <relationshipLabel>Order Charge Titles</relationshipLabel>
        <relationshipName>Format_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Charge Titles</relationshipLabel>
        <relationshipName>Order_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Titles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Titles</label>
        <referenceTo>Titles__c</referenceTo>
        <relationshipLabel>Order Charge Titles</relationshipLabel>
        <relationshipName>Order_Charge_Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Charge Titles</label>
    <listViews>
        <fullName>Order_Administration_Order_Charge_Titles</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Administration</label>
        <queue>Order_Administration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OCT-{0000}</displayFormat>
        <label>Order Charge Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Charge Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>